--- a/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
+++ b/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
@@ -5,7 +5,7 @@
       <div class="col-xs-8 text-center">
         <h1 class="t-agent">{{headerTitle}}</h1>
       </div>
-      <div class="col-xs-2 text-right toppad" *ngIf="showRefreshButton"><img src="../../../../images/refresh.svg" alt=""
+      <div class="col-xs-2 text-right toppad" *ngIf="showRefreshButton" data-toggle="modal" data-target="#changepic"><img src="../../../../images/refresh.svg" alt=""
           (click)="logout()"></div>
       <div class="col-xs-2 text-right toppad" *ngIf="showFilterButton"><img src="../../../../images/filter.svg" alt=""
           (click)="onFilterClick()"><br><span class="edit-detail"><a href="#">Filter</a></span></div>
