--- a/src/app/views/dashboard/top-agents/top-agents.component.html
+++ b/src/app/views/dashboard/top-agents/top-agents.component.html
@@ -18,7 +18,7 @@
       <span class="straight-line"></span>
 
     </div>
-    <button (click)="topFunction()" id="myBtn" title="Go to top"><span
-        class="glyphicon glyphicon-arrow-up"></span></button>
+    <button (click)="topFunction()" id="myBtn" title="Go to top"><span class="glyphicon glyphicon-arrow-up"></span></button>
   </div>
+  <app-recent-profiles></app-recent-profiles>
 </div>
