implemented news page

--- a/src/app/customUI/dialogs/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/customUI/dialogs/confirmation-dialog/confirmation-dialog.component.html
@@ -1,7 +1,6 @@
-
 <mat-dialog-content>
   <div class="modal-header nobord">
-    <h5 class="modal-title" id="exampleModalLabel">{{data.alertTitle}}</h5>
+    <h3 class="modal-title" id="exampleModalLabel" style="font-weight: bold">{{data.alertTitle}}</h3>
   </div>
   <hr class="logout-hr">
   <div class="modal-body">
