--- a/src/app/views/forgot-password/forgot-password.component.html
+++ b/src/app/views/forgot-password/forgot-password.component.html
@@ -24,7 +24,7 @@
 
           <div class="col-md-12 col-xs-12 text-center box1">
 
-            <button type="button" class="btn btn-primary btn-lg btn-login">Submit</button>
+            <button type="button" class="btn btn-primary btn-lg btn-login" (click)="onSubmit()" >Submit</button>
             <div class="clearfix"></div>
           </div>
         </form>
