--- a/src/cssFiles/custom.css
+++ b/src/cssFiles/custom.css
@@ -123,3 +123,12 @@ ul {
 .bottom-line {
   border-bottom: 2px solid #F68933;
 }
+
+.news p {
+  font-size: 12px;
+  color: #3498DB;
+}
+
+.divider{
+  margin-top: 20px;
+}
