added logout and recent profile functionality

--- a/src/app/customUI/dialogs/recent-profiles/recent-profiles.component.html
+++ b/src/app/customUI/dialogs/recent-profiles/recent-profiles.component.html
@@ -1,11 +1,11 @@
 <div class="modal fade" id="changepic" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
+  aria-hidden="true" [ngStyle]="{'display': mdlSampleIsOpen ? 'block' : 'none', 'opacity': 1}">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content boxshape">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLongTitle">Recent</h5>
         <div class="close orange-close-btn" data-dismiss="modal" aria-label="Close" #closeRecentProfileModal>
-          <span aria-hidden="true"><img src="../../../../images/orange-close-btn.svg" alt=""></span>
+          <span aria-hidden="true" (click)="openModal(false)" ><img src="../../../../images/orange-close-btn.svg" alt=""></span>
         </div>
       </div>
       <div class="modal-body">
@@ -15,13 +15,6 @@
             <a>{{item.name}}</a>
           </li>
         </ul>
-        <!-- <li class="recent1"><a href="#">NETCO. Inc</a></li>
-          <li class="recent2"><a href="#">Anne D. Coley</a></li>
-          <li class="recent2"><a href="#">Bhavin Patel</a></li>
-          <li class="recent2"><a href="#">Kristi Marie Moretz-Icard</a></li>
-          <li class="recent2"><a href="#">Ahmed</a></li>
-          <li class="recent2"><a href="#">Olivia</a></li>
-        </ul> -->
       </div>
     </div>
   </div>
