--- a/src/app/customUI/dialogs/alert-dialog/alert-dialog.component.html
+++ b/src/app/customUI/dialogs/alert-dialog/alert-dialog.component.html
@@ -1,4 +1,3 @@
-
 <mat-dialog-content>
   <div class="modal-header nobord">
     <h5 class="modal-title" id="exampleModalLabel">{{data.alertTitle}}</h5>
@@ -6,6 +5,6 @@
   <p style="padding: 10px">{{data.message}}</p>
 </mat-dialog-content>
 <mat-dialog-actions id="DialogButtonGroup" align="end">
- 
-  <button matDialogClose="confirm" class="dialogYes" (click)="onNoClick()">OK</button>
+
+  <button matDialogClose="confirm" class="dialogYes" (click)="onNoClick()">{{data.okText}}</button>
 </mat-dialog-actions>
