--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -18,7 +18,7 @@
           <div class="col-md-4 col-xs-12 box1">
             <label for="Username">Username</label>
             <div class="input-group">
-              <input type="email" placeholder="Email Address" formControlName="email" class="form-control" id="username">
+              <input type="email" placeholder="Email Address" autocomplete="false" formControlName="email" class="form-control" id="username">
             </div>
           </div>
 
