--- a/src/app/views/agent/agent-detail/agent-detail.component.html
+++ b/src/app/views/agent/agent-detail/agent-detail.component.html
@@ -3,17 +3,18 @@
     <div class="col-xs-12 col-md-12 cell-bg">
       <div class="agent-detail ">
         <div class="dp">
-          <div class="badge bd-col">A</div><img src={{agentInfo.agentImg}} onerror="this.src='../../../../images/placeholder.png'" alt="" />
+          <div class="badge bd-col">A</div><img src={{agentInfo.agentImg}} onerror="this.src='../../../../images/placeholder.png'"
+            alt="" />
         </div>
         <h4>{{agentInfo.name}}</h4> <span class="building-icon padding-left-twenty-five">{{agentInfo.entityId}}</span>
         <div class="clearfix"></div>
         <div class="amount bx1"><span>Net Premium</span><br>$ {{agentInfo.netPermium}}</div>
-        <div class="amount bx2"><span><img src="../../../../images/share.svg" alt="" /></span></div>
-        <div class="amount bx3"><span><img src="../../../../images/doc.svg" alt="" /></span></div>
+        <div class="amount bx2"><span><img src="../../../../images/share.svg" alt=""  [vcdDownloadVCard]="vCard"/></span></div>
+        <div class="amount bx3"><span><img src="../../../../images/doc.svg" alt="" (click)="openLocationOnMap()" /></span></div>
       </div>
     </div>
 
-    <div class="col-xs-12 col-md-12">  
+    <div class="col-xs-12 col-md-12">
       <ul class="agent-details">
         <li class="agent-contact" (click)="contactDetailClick()"><a>Contact </a></li>
         <li class="objectives" (click)="objectiveClick()"><a>Objective</a></li>
