--- a/src/cssFiles/style.css
+++ b/src/cssFiles/style.css
@@ -46,7 +46,15 @@ input {
 .nospace {
   padding: 0px;
   margin: 0px;
-  z-index:1;
+  z-index: 1;
+}
+
+.noPadding {
+  padding: 0px;
+}
+
+.paddintTop15 {
+  padding-top: 15px;
 }
 
 .box1 input[type="email"] {
@@ -174,6 +182,8 @@ form input[type="checkbox"] {
   background: #fff;
   border: 1px solid #ddd;
   box-shadow: 0px 1px 2px #dadada;
+  padding: 14px 25px;
+  margin-bottom: 5px;
 }
 
 .agent-detail {
@@ -183,7 +193,7 @@ form input[type="checkbox"] {
 .agent-detail h4 {
   font-size: 14px;
   font-weight: bold;
-  color: #000;
+  color: #F68933;
   padding: 0px;
   margin: 5px 0px 0px 0px;
 }
@@ -191,7 +201,7 @@ form input[type="checkbox"] {
 .agent-detail span {
   font-size: 12px;
   font-weight: normal;
-  color: #000;
+  color: #626364;
 }
 
 .dp {
@@ -202,19 +212,58 @@ form input[type="checkbox"] {
   height: 46px;
   text-align: center;
   float: left;
-  padding-top: 7px;
+  padding-top: 10px;
   margin-right: 10px;
+  position: relative;
+}
+
+.dpProfile_wp {
+  width: 24px;
+  height: 24px;
+  border-radius: 30px;
+  position: absolute;
+  top: -10px;
+  left: -12px;
+  font-size: 14px;
+  color: #fff;
+  font-weight: bold;
+}
+
+.proActiBg {
+  background: #94D14F;
+}
+
+.proProsBg {
+  background: #99bad5;
+}
+
+.proClossBg {
+  background: #333333;
+}
+
+.proCancBg {
+  background: #fe0000;
+}
+
+.proWithBg {
+  background: #6a400b;
 }
 
 .amount {
   margin-top: 10px;
-  color: #36B700;
+  color: #000000;
+  font-size: 12px;
   font-weight: bold;
 }
 
 .amount span {
+  font-size: 14px;
+  font-weight: normal;
+  color: #626364;
+}
+
+.amount span.fonSize {
   font-size: 12px;
-  color: #000;
 }
 
 .nav-bg {
@@ -225,6 +274,7 @@ form input[type="checkbox"] {
 
 .nav-bg a {
   color: #fff;
+  display: block;
 }
 
 .sidenav {
@@ -486,7 +536,7 @@ ul.agent-details li.associates a {
 }
 
 .agent-contact h4 {
-  color: #707070;
+  color: #a3a3a3;
   font-size: 14px;
   font-weight: bold;
   margin-bottom: 0px;
@@ -499,7 +549,7 @@ ul.agent-details li.associates a {
 }
 
 .agent-contact .state {
-  color: #707070;
+  color: #a3a3a3;
   font-size: 14px;
   font-weight: bold;
   width: 50%;
@@ -507,16 +557,23 @@ ul.agent-details li.associates a {
   margin-top: 10px;
 }
 
-.agent-contact .state span:first-child {
-  color: #707070;
+.agent-contact .state span {
+  color: #000;
   font-size: 14px;
-  font-weight: bold;
+  font-weight: normal;
 }
 
-.agent-contact .state span.st2 {
-  color: #000;
-  font-size: 13px;
+.ag-detail-icons {
+  font-size: 14px;
+  color: #F68933;
   font-weight: normal;
+  margin: 0px;
+  padding: 0px;
+}
+
+.ag-detail-icons a {
+  color: #F68933;
+
 }
 
 .ag-detail ul {
@@ -839,6 +896,92 @@ ul.recent li.recent2 a {
   opacity: 1;
 }
 
+.loadMoreWp {
+  margin: 30px 0px 0px 0px;
+}
+
+.loadMoreWp hr {
+  height: 1px;
+  background: #F68933;
+  margin: 0;
+}
+
+.loadMore {
+  margin: 0 auto;
+  width: 75px;
+  margin-top: -13px;
+  text-align: center;
+  background: #F2F2F2;
+}
+
+.loadMore a {
+  color: #F68933;
+  font-size: 10px;
+  font-weight: bold;
+  font-style: italic;
+  padding: 0px 4px;
+}
+
+.modal-content {
+  border-radius: 4px;
+}
+
+.modal-header {
+  padding: 10px 15px;
+  border-bottom: 0px solid #707070;
+}
+
+.modal-header h4.modal-title {
+  font-size: 14px;
+  color: #000000;
+  font-weight: bold;
+  border-bottom: 1px solid #707070;
+  padding-bottom: 10px;
+}
+
+/* .modal-footer {padding: 10px 15px;} */
+
+.modal-footer a {
+  font-size: 14px;
+  color: #F68933;
+  font-weight: bold;
+  padding: 0px 0px 0px 30px;
+}
+
+.modal-footer a span {
+  font-weight: normal;
+}
+
+.modal-body {
+  padding: 0px 15px;
+}
+
+.modal-content .form-group label {
+  font-size: 12px;
+  font-weight: bold;
+  color: #000;
+}
+
+.modal-content .form-group input {
+  font-size: 14px;
+  font-weight: normal;
+  color: #000;
+  border-radius: 0;
+  border: 0px;
+  box-shadow: none;
+  border-bottom: solid 1px #fac498;
+  padding: 6px 0px;
+}
+
+.modal-content .form-group select.form-control {
+  border-radius: 0;
+  padding: 6px 6px;
+}
+
+
+
+
+
 
 
 
@@ -848,13 +991,15 @@ ul.recent li.recent2 a {
 
 @media (max-width: 1024px) {
   .cell-bg {
-    margin-right: 10px;
+    padding: 14px 25px;
+    margin-bottom: 5px;
   }
 }
 
 @media (max-width: 992px) {
   .cell-bg {
-    margin-right: 10px;
+    padding: 14px 25px;
+    margin-bottom: 5px;
   }
 
 }
@@ -863,7 +1008,8 @@ ul.recent li.recent2 a {
 @media (max-width: 768px) {
 
   .cell-bg {
-    margin-right: 10px;
+    padding: 14px 25px;
+    margin-bottom: 5px;
   }
 }
 
@@ -900,7 +1046,7 @@ ul.recent li.recent2 a {
   }
 
   .cell-bg {
-    padding: 10px 25px;
+    padding: 14px 25px;
     margin-bottom: 5px;
   }
 
