--- a/src/app/views/dashboard/ProfileAndSetting/app-setting/app-setting.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/app-setting/app-setting.component.html
@@ -52,11 +52,11 @@
     <div class="col-xs-12 col-md-6">
       <div class="form-group">
         <label for="sel1">Reorder Functionality for Sections:</label>
-        <button type="button" class="btn btn-light">Rearrange Home Modules <img src="images/arrow-icon.png"
+        <button type="button" class="btn btn-light" (click)="rearrangeHomeModules()" >Rearrange Home Modules <img src="../../../../../images/arrow-icon.png"
             align="right" alt=""></button>
-        <button type="button" class="btn btn-light">Rearrange Person Section <img src="images/arrow-icon.png"
+        <button type="button" class="btn btn-light">Rearrange Person Section <img src="../../../../../images/arrow-icon.png"
             align="right" alt=""></button>
-        <button type="button" class="btn btn-light">Rearrange Agent Section <img src="images/arrow-icon.png"
+        <button type="button" class="btn btn-light">Rearrange Agent Section <img src="../../../../../images/arrow-icon.png"
             align="right" alt=""></button>
       </div>
     </div>
