--- a/src/app/views/dashboard/ProfileAndSetting/profile-setting/profile-setting.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/profile-setting/profile-setting.component.html
@@ -11,8 +11,9 @@
           7345 S. Pechos Rd. Nevada
         </span>
         <a>
-          <button type="button" class="btn btn-primary edit-but-orange" (click)="onEditProfileClick()"><img
-              src="../../../../../images/edit-icon.svg" alt="">&nbsp; Edit Profile Details</button>
+          <button type="button" class="btn btn-primary edit-but-orange" (click)="onEditProfileClick()"
+            data-toggle="modal" data-target="#myModal"><img src="../../../../../images/edit-icon.svg" alt="">&nbsp; Edit
+            Profile Details</button>
         </a>
       </div>
     </div>
@@ -94,5 +95,5 @@
 
 
   </div>
-  
+
 </div>
