--- a/src/cssFiles/custom.css
+++ b/src/cssFiles/custom.css
@@ -198,3 +198,42 @@ mat-ink-bar.mat-ink-bar {
 .mat-tab-nav-bar {
   border-bottom: 1px solid #f4c39c !important;
 }
+
+
+.example-list {}
+
+.example-box {
+  border-bottom: solid 1px transparent;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: transparent;
+  font-size: 14px;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow:  0px 0px 8px 2px #f68933;
+  
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
