--- a/src/app/views/agent/contact-detail/contact-detail.component.html
+++ b/src/app/views/agent/contact-detail/contact-detail.component.html
@@ -6,8 +6,8 @@
       <div class="col-xs-7 text-center">
         <h1 class="t-agent">Contact</h1>
       </div>
-      <div class="col-xs-3 text-center tpad"><img src="../../../../images/edit.svg" alt=""
-          (click)="onEditProfileClick()"><br><span class="edit-detail"><a>Edit Details</a></span></div>
+      <div class="col-xs-3 text-center tpad"><img src="../../../../images/edit.svg" alt=""><br><span
+          class="edit-detail"><a data-toggle="modal" data-target="#myModal">Edit Details</a></span></div>
     </div>
 
   </div>
