added agent detail item arrange ui and functionality

--- a/src/app/views/rearrange-items-layouts/agent-detail-item-rearrange/agent-detail-item-rearrange.component.html
+++ b/src/app/views/rearrange-items-layouts/agent-detail-item-rearrange/agent-detail-item-rearrange.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt=""></div>
       <div class="col-xs-7 text-center">
-        <h1 class="t-agent">Module Layout</h1>
+        <h1 class="t-agent">Agent Detail Module Layout</h1>
       </div>
       <div class="col-xs-3 text-right tpad"><a class="opacity" (click)="Save()"><img
             src="../../../../images/save-icon.svg" alt=""><br><span class="edit-detail">Save</span></a>
@@ -16,7 +16,7 @@
         <li class="example-box" *ngFor="let item of sideNavArray" cdkDrag>
           <div class="col-xs-12 col-md-6 cell-bg">
             <div class="modules-layout">
-              <a alt=""><img src="{{item.img}}" alt=""> &nbsp; {{item.title}}</a>
+              <a href="#" alt=""><img src="{{item.img}}" alt=""> &nbsp; {{item.title}}</a>
             </div>
           </div>
         </li>
