--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -4,8 +4,8 @@
       <header>
         <div class="row">
           <div class="col-md-4 col-xs-12 text-center">
-            <h1 class="logo"><img src="../../../../images/logo.png" class="img-reponsive" alt="" /><br><img src="../../../../images/Compass.png"
-                class="img-reponsive" alt="" /></h1>
+            <h1 class="logo"><a href="/"><img src="../../../../images/logo.png" class="img-reponsive" alt="" /><br><img
+                  src="../../../../images/Compass.png" class="img-reponsive" alt="" /></a></h1>
           </div>
         </div>
       </header>
@@ -14,30 +14,31 @@
     <div class="container app-bg">
       <div class="row">
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-
           <div class="col-md-4 col-xs-12 box1">
             <label for="Username">Username</label>
             <div class="input-group">
-              <input type="email" placeholder="Email Address" autocomplete="false" formControlName="email" class="form-control" id="username">
+              <input type="email" autocomplete="false" formControlName="email" class="form-control" id="username">
             </div>
           </div>
 
           <div class="col-md-4 col-xs-12 box1">
             <label for="Password">Password</label>
             <div class="input-group">
-              <input type="password" placeholder="Password" class="form-control" formControlName="password" id="password">
+              <input type="password" class="form-control" id="password" formControlName="password">
             </div>
           </div>
 
           <div class="col-md-4 col-xs-12 box1">
-            <div class="form-check remember">
-              <input type="checkbox" class="form-check-input" id="rememberme" formControlName="isChecked" (change)="checkValue(isChecked)">
-              <label class="form-check-label" for="rememberme">Remember me</label>
+
+            <div class="checkbox checkBoxWp">
+              <input id="checkbox1" type="checkbox" formControlName="isChecked">
+              <label class="rememberMe" for="checkbox1">Remember me</label>
             </div>
+
             <button type="submit" class="btn btn-primary btn-lg btn-login">Login</button>
-            <div class="clearfix"></div>
-            <div class="divider"></div>
-            <div class="forgotpass text-center"><a href="../forgot-password">Forgot your password?</a></div>
+            <div class="clearfix paddingTop15"></div>
+
+            <div class="forgotpass"><a href="../forgot-password">Forgot your password?</a></div>
 
           </div>
         </form>
