--- a/src/app/views/rearrange-items-layouts/agent-detail-item-rearrange/agent-detail-item-rearrange.component.html
+++ b/src/app/views/rearrange-items-layouts/agent-detail-item-rearrange/agent-detail-item-rearrange.component.html
@@ -13,7 +13,7 @@
   <div class="container app-bg4">
     <div class="row">
       <ul class="example-list" cdkDropList (cdkDropListDropped)="onSort($event)">
-        <li class="example-box" *ngFor="let item of sideNavArray" cdkDrag>
+        <li class="example-box" *ngFor="let item of agentDetailItems" cdkDrag>
           <div class="col-xs-12 col-md-6 cell-bg">
             <div class="modules-layout">
               <a href="#" alt=""><img src="{{item.img}}" alt=""> &nbsp; {{item.title}}</a>
