--- a/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
+++ b/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
@@ -12,7 +12,7 @@
           (click)="onFilterClick()"><br><span class="edit-detail"><a href="#">Filter</a></span></div>
 
       <div class="col-xs-2 text-right toppad" *ngIf="showRecentProfileButton"><img
-          src="../../../../images/recent-profile-white.svg" alt="" (click)="onRecentProfileClick()"><br><span
+          src="../../../../images/recent-profile-white.svg" alt="" data-toggle="modal" data-target="#recentAssociatesl" (click)="onRecentProfileClick()"><br><span
           class="edit-detail"><a href="#"></a></span></div>
 
       <div class="col-xs-2 text-right toppad" *ngIf="showLogoutButton"><img src="../../../../images/ic_logout.svg"
