--- a/src/app/customUI/dialogs/recent-profiles/recent-profiles.component.html
+++ b/src/app/customUI/dialogs/recent-profiles/recent-profiles.component.html
@@ -1,10 +1,11 @@
-<div class="modal fade" id="recentAssociatesl" role="dialog">
+<div class="modal fade" id="recentAssociatesl" role="dialog"
+>
   <div class="modal-dialog">
 
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><img src="../../../../images/ic_menu_close.svg" alt=""></button>
+        <button type="button" class="close" data-dismiss="modal" #closeRecentProfileModal><img src="../../../../images/ic_menu_close.svg" alt=""></button>
         <h4 class="modal-title">Recent</h4>
       </div>
       <form role="form">
