--- a/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
+++ b/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
@@ -1,21 +1,21 @@
-<div class="container nav-bg">
-  <div class="row">
+<div class="container">
+  <div class="nav-bg row wrapper">
     <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
     <div class="col-xs-8 text-center">
       <h1 class="t-agent">13 Month Activity</h1>
     </div>
-    <div class="col-xs-2 text-right toppad"><a href="#" alt="" data-toggle="modal" data-target="#recentAssociatesl"><img
+    <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()"  alt="" data-toggle="modal" data-target="#recentAssociatesl"><img
           src="../../../../images/baseline-history.svg" alt=""></a></div>
   </div>
 
-  <div class="container">
+  <div class="container bottom-wrapper-for-back">
     <div class="row">
       <div class="col-xs-1"></div>
       <div class="col-xs-10 divider"></div>
       <div class="col-xs-1"></div>
     </div>
   </div>
-  <div class="container app-bg2" style="padding-top:10px;">
+  <div class="container app-bg2  " style="padding-top:10px;">
     <div class="row">
 
       <div class="col-xs-12 col-md-6">
