favorite and recent-profile ui added

--- a/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
+++ b/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
@@ -190,4 +190,4 @@
     </div>
   </div>
 </div>
-<app-recent-profiles></app-recent-profiles>
+<app-recent-profile-dialog></app-recent-profile-dialog>
