--- a/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
+++ b/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
@@ -48,7 +48,7 @@
   </div>
   <div class="bottom-wrapper">
 
-    <app-recent-profiles></app-recent-profiles>
+    <app-recent-profile-dialog></app-recent-profile-dialog>
 
     <router-outlet (pageNameEvent)="receivePageName($event)"></router-outlet>
   </div>
