--- a/src/app/views/agent/agent-associates/agent-associates.component.html
+++ b/src/app/views/agent/agent-associates/agent-associates.component.html
@@ -139,4 +139,4 @@
     </div>
   </div>
 </div>
-<app-recent-profiles></app-recent-profiles>
+<app-recent-profile-dialog></app-recent-profile-dialog>
